Fixing homepage on mobile

--- a/stylesheets/_home.scss
+++ b/stylesheets/_home.scss
@@ -5,9 +5,17 @@
     font-size: 16px;
     text-align: center;
 
+    @media (max-width: 500px) {
+      padding: 10px;
+    }
+
     &.step {
       padding: 80px;
       color: white;
+
+      @media (max-width: 500px) {
+        padding: 15px;
+      }
 
       &:nth-child(3n + 1) {
         background: $purple;
@@ -30,7 +38,17 @@
   p.website {
     width: 100%;
     margin: 0;
-    margin-top: 20px;
+    margin-top: 40px;
+    font-weight: bold;
+
+    @media (max-width: 500px) {
+      margin-bottom: 20px;
+    }
+
+    a {
+      display: block;
+      font-size: 1.3em;
+    }
   }
 
   h1 {
@@ -54,6 +72,11 @@
     line-height: 1.8em;
     vertical-align: top;
 
+    @media (max-width: 500px) {
+      width: 100%;
+      margin-left: 0;
+    }
+
     &.left {
       margin-right: 40px;
       margin-left: 0;
@@ -63,6 +86,11 @@
   img {
     display: inline-block;
     width: 400px;
+
+    @media (max-width: 500px) {
+      width: 100%;
+      margin-top: 20px;
+    }
   }
 
   button, .button {
@@ -73,6 +101,10 @@
     width: 120px;
     height: 40px;
     vertical-align: top;
+
+    @media (max-width: 500px) {
+      margin-top: 20px;
+    }
   }
 
   button {
@@ -86,6 +118,11 @@
 
     &.alone {
       margin: 0 auto;
+
+      @media (max-width: 500px) {
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -105,5 +142,11 @@
     margin-bottom: 1.5em;
     font-size: 2.7em;
     font-weight: 100;
+
+    @media (max-width: 500px) {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 2em;
+    }
   }
 }
